# ChangeLog for dev-haskell/x11
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.27 2012/12/16 18:51:52 ago Exp $

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> x11-1.5.0.1.ebuild:
  Stable for x86, wrt bug #447462

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> x11-1.5.0.1.ebuild:
  Stable for amd64, wrt bug #447462

  12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org> x11-1.4.6.1.ebuild,
  x11-1.5.0.0-r1.ebuild, x11-1.5.0.0.ebuild, x11-1.5.0.1.ebuild:
  move dev-haskell/x11/x11-1.5.0.0.ebuild ebuild to mirror://hackage

*x11-1.5.0.1 (06 Mar 2012)

  06 Mar 2012; Mark Wright <gienah@gentoo.org> x11-1.5.0.0.ebuild,
  x11-1.5.0.0-r1.ebuild, +x11-1.5.0.1.ebuild:
  Bump x11 to 1.5.0.1

  06 Mar 2012; Mark Wright <gienah@gentoo.org> x11-1.5.0.0.ebuild,
  x11-1.5.0.0-r1.ebuild:
  Add ~ppc64 keywords to x11 1.5.0.0, thanks to EM3RY for testing.

*x11-1.5.0.0-r1 (28 Nov 2011)

  28 Nov 2011; Sergei Trofimovich <slyfox@gentoo.org> +x11-1.5.0.0-r1.ebuild:
  Enable USE=xinerama by default.

*x11-1.5.0.0 (11 May 2011)

  11 May 2011; Sergei Trofimovich <slyfox@gentoo.org> -x11-1.2.ebuild,
  -x11-1.2.1.ebuild, -x11-1.2.2.ebuild, -x11-1.4.0.ebuild, -x11-1.4.1.ebuild,
  -x11-1.4.2.ebuild, -x11-1.4.5.ebuild, +x11-1.5.0.0.ebuild:
  Version bump. Removed ancient ones.

  01 Jul 2010; Jeroen Roovers <jer@gentoo.org> x11-1.4.2.ebuild,
  x11-1.4.5.ebuild, x11-1.4.6.1.ebuild:
  Drop support for ghc and darcs.

  25 Apr 2010; Fabian Groffen <grobian@gentoo.org> x11-1.4.6.1.ebuild:
  Marked ~amd64-linux ~x86-linux ~ppc-macos, bug #301709

  24 Feb 2010; Markos Chandras <hwoarang@gentoo.org> x11-1.4.6.1.ebuild:
  Stable on amd64 wrt bug #297347

  31 Dec 2009; Christian Faulhammer <fauli@gentoo.org> x11-1.4.6.1.ebuild:
  stable x86, bug 297347

  26 Oct 2009; <kolmodin@gentoo.org> x11-1.4.6.1.ebuild:
  Fix deps

*x11-1.4.6.1 (26 Oct 2009)

  26 Oct 2009; <kolmodin@gentoo.org> +x11-1.4.6.1.ebuild: