@@ -2,9 +2,11 @@ AUX x11-1.4.2-with-xinerama.patch 800 SHA256 8132b3074e80d45c913a6ceafdd601cd569
 DIST X11-1.4.6.1.tar.gz 175567 SHA256 3e1375d4e53a8366fa2ea12bd9c3033ffe2f7dd00443acd84f722cf0dfff0fa9 SHA512 9dc4c8c2a3d38fa70a297758fc8cb6e711dd33b1ce6f4bd4263dd7fcb36a09f2012ff7a3ac80476ca77357f1648f08b9dfa93928a968192e2175d7b72b04aec5 WHIRLPOOL 40f40b53075f1a7cc5b09b7221a5ec595b7198960cb2e263565262203c7552d11ccb5ddda3ac15b93ae96a7b3515d4c4851b04d86e0a15fbfba6f0c8f70bf8ee
 DIST X11-1.5.0.0.tar.gz 178211 SHA256 653ff8aa4053574a36dbb1729459df6e5a1a87a223bc3eeced8e40c6e3a5406f SHA512 dc097012c09c19a7dbb42711fd0cd54c84e98cb3bc150d77a7470c63912908d3241079a87ca3797cae36b00fa2d52c9e6db33287e9d44dc58a43f1b85ee33518 WHIRLPOOL 18ad7d3d657614f88b579721487b187c99435e68023ab830c4beed5894cf741625a8548b8c148ffc5c6aea7af7d36082b77bf23a408747b27c676303928b93a8
 DIST X11-1.5.0.1.tar.gz 176346 SHA256 29c07a609cc4943e743ce68a99b8d4c089e66a74a55ac76b88464fba211d1369 SHA512 de3e32543fcdcf86aa14443aea02a6862ed39cdbaaf732cee325155af2e84570a9cbdbb9da69ab247bfcdc8e475b9d3b7c678f9e7b3e996370bbbb9b1aacabce WHIRLPOOL 5f21733990e2ab9737d9d92b2824b0d0d6187088956c1b44b13a691632be29fd663b2c03c78a8bdf026f8695ab2e5d6f9e4ffb1fee0d59c3616c5b215941e12a
+DIST X11-1.6.0.2.tar.gz 179112 SHA256 1c6a7823155bf251c4676981a1370b61af112e77d7f82f744c6bae2fe6482f7c SHA512 753bf147b1933e4c52f087d52ec90d3f2fb8764947abec4908b4fb0ff817f67395f174983054312d67e7175d34a73ff84661343a25a0eb71082391a16b9bceab WHIRLPOOL b0e3ba7211d0591b5ae8060c1e88078736c123ab3c700ec833139e860267e8c0746242fba61e64ae538069dc6b49c9c5d253eb97af64cff758818bc1d5c90b10
 EBUILD x11-1.4.6.1.ebuild 846 SHA256 4e9b6900f8cc320b8f1c645202035de5bdb528400e04ea0f701cf8f15ab6ba37 SHA512 5cfd8088095578119baeaa062b1c7cce1157b5c5af67f5f3ff6ef73f02d513d66500761324e7a3cc364cb590e185f7fe8f8c0d6cf13c1c5e17c55905705cb731 WHIRLPOOL 49170e992558cd892cd99d60ae4a2bdd9f59a1d949cbda5beb94ff053043f0829bd38b56c76fe6f27308a4c35eeb8f83635be37139357798feb20ecd2eca24c8
 EBUILD x11-1.5.0.0-r1.ebuild 918 SHA256 aa9ff39f4f497455ff7a12eb9ae26d3c780a000d0b5f1061813005bf28f42be8 SHA512 30cf437627791ecae122f86520647e87e8a05ad93dd9128d4121aff5009287864b137a1a4db950197a8695e5b5dabb10ec9747e2c91132dc0e041b9e47fc4071 WHIRLPOOL d8abe85bc24be5d4a19832a5ed8d94bcec1f788d9db619e081d3258ebffe47dab4b174d86db93342c871487e8b8095f64b89eb51c3e6945a469e3cef6a16bd0d
 EBUILD x11-1.5.0.0.ebuild 914 SHA256 f61dcd86f56a0b7549965bb8a98ff0089f2622d62cad4d919382d2ef3521be63 SHA512 5183a26728db184603dcb61fafacc0605a5e9f3b8b8685a2e93d414963b39c1c1076d5b3e9d72108140ccae22566d1d8f28100f634269e6c4e12460325c727a0 WHIRLPOOL 5da06f06b067762365379492f49ddc80baf4af6272f9eb3c193a834e64763a7c56ce16fb3f34f40ee546d5e2e1b16cbc7c6bbab1fd9299408ca741d9cf0be30a
 EBUILD x11-1.5.0.1.ebuild 932 SHA256 fe03fca4572d13aad63f7dde586f127cd054ad956901ec8f19101b91fb403e09 SHA512 20bcc41cbc960f89816134c08534e742017b677417fb26a98b469ac8a0edfdc27794605c773f0acc609ee04142c41feec2dad8023aab0e53233908c08f6753cc WHIRLPOOL c59766e1a83af9edb5395e15a657e30b2fb8faad1aea4778a6be41051779e8a45d2e5f638e4d9d79f989f048410d5a1dadae8d49571ff19d720a863584835fec
-MISC ChangeLog 4167 SHA256 2707a91a77afa23d129e44b7ffc7a9edabfcc1f47c15db637780f54cee0c0dcd SHA512 cb673881692151c1c18e25c7cbbdc1a34a5c8ab7ca37285177ab0002f36b853295c1f151c4499c83b6ec00396057d3ae03a8d8a5590cd192c0f0e39608f976a7 WHIRLPOOL 9ecc560027d96237d130819dbf15635605c9b58456e8df6de33c983d0161e670a83b9046658f5ae3baa10a96a58215af100a034e4584b64307c7ae7abe9e39e5
+EBUILD x11-1.6.0.2.ebuild 980 SHA256 bfcc21aaebf06cd1e73bff9a0f1d371322f95a34e3f0d2951bf69897c9a6d1f9 SHA512 02325a059ad7a394f97b9a654289b9b8b196536a4b6dd285d3813fde827232863c35b02239aa87719daec60784a1238cd1ea5d8373a1a031d931f3f003e0c668 WHIRLPOOL 8deec9922d9803794583ff92693f48689f84ce5ef9d5593c9ae6ba3ee820e06cd2312cb09c29cdd555c7c26d18eac2102029cb7b733f5f3e26469bc896067f0f
+MISC ChangeLog 4288 SHA256 a1979a85f936c422b51f14fc33278188d142cb2c6921af769a2a97f82285144f SHA512 12a410c3581e8a2ca70938622568c818ca0877205b11ad2d800a5131553bef857104c3b481af5a3e8826e5f1303437ab04334e9cc524799ac6fc87918614c9a0 WHIRLPOOL ce0a4f78406a6ba3e7e983bad6d93b216a1343c44e59f7bba3c397fbde698e0d0352ca89e3652c81e90fd67aa45d42b5192cd54cc83079f3cec82f8d74a1af17
 MISC metadata.xml 223 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508 SHA512 24765bbf1cb187cd262aa7fb3824c1cec65e2bf3f2198099de688916d96401a26458265b15408f22b1fbd6d6a2842df814a57ceda80dfa00d130b24423b7544f WHIRLPOOL 8fd6700f6198db6540eb51edf11372faeb6eb8a542a692e515badf236f62444f2c180f7d08e0f98e9fdfa23de14631b31af50543469aaa27084d6b637e2644c7
