@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/x11
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.27 2012/12/16 18:51:52 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.28 2013/01/01 08:15:43 qnikst Exp $
+
+*x11-1.6.0.2 (01 Jan 2013)
+
+  01 Jan 2013;  <qnikst@gentoo.org> +x11-1.6.0.2.ebuild:
+  dev-haskell/x11  version bump
 
   16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> x11-1.5.0.1.ebuild:
   Stable for x86, wrt bug #447462
